fix work alignment with arrows

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -31,6 +31,7 @@ a:hover{
 
 #left-arrow,
 #right-arrow,
+#work,
 .grid-4,
 .grid-5,
 li{
